Add Star Ratings feature, minor bugfixes
* Add ability to show Star Ratings on View Product Page (PDP)
* Add correct/absolute View Link to Ratings widget
* Add localized Product Name to Ratings Widget
* Minor formatting and code quality improvements

--- a/src/Resources/views/layouts/default/oro_product_frontend_product_view/layout.html.twig
+++ b/src/Resources/views/layouts/default/oro_product_frontend_product_view/layout.html.twig
@@ -1,5 +1,7 @@
 {% block _yotpo_reviews_widget %}
-    <h2>Yotpo Reviews</h2>
+    {% set view_link = website_secure_path('oro_product_frontend_product_view', {id: product.id}) %}
+    <h2>{{ 'hack_oro.yotpo.frontend.label'|trans }}</h2>
+
     {% import 'OroProductBundle::image_macros.html.twig' as Image %}
     <script type="text/javascript">
         (function e(){var e=document.createElement("script");
@@ -12,10 +14,17 @@
 
     <div class="yotpo yotpo-main-widget"
          data-product-id="{{ product.sku }}"
-         data-name="{{ product.denormalizedDefaultName }}"
-         data-url="{{ app.request.uri }}"
+         data-name="{{ product.names|localized_value|oro_html_strip_tags }}"
+         data-url="{{ view_link }}"
          data-image-url="{{ productImage ? Image.url(productImage.image, 'product_original') : ""}}"
         style="padding: 20px"
     >
+    </div>
+{% endblock %}
+
+{% block _yotpo_ratings_widget %}
+    <div class="yotpo bottomLine"
+         data-product-id="{{ product.sku }}"
+         data-url="{{ website_secure_path('oro_product_frontend_product_view', {id: product.id}) }}">
     </div>
 {% endblock %}
